data/all_generated_tests/raw_wast_tests/br_table_ImproperFunctionCallorReturnHandling_2416.wast
;; 6. **Test of Function with Multiple Returns Controlled via br_table**:     - Design a function that contains multiple return statements, each under different `br_table` controlled conditions.    - *Constraint*: Validate that the `br_table` instruction can switch between different return paths correctly.    - *Relation to Improper Function Call or Return Handling*: Checks for appropriate handling of multiple returns from a single function when controlled by a `br_table`.

(assert_invalid
  (module (func $multi_return
    (block (result i32) 
      (block (result i32) 
        (i32.const 0)
        (br_table 0 1 2 (i32.const 1))
      )
      return (i32.const 42)
    )
  ))
  "type mismatch"
)